// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default truncation 1`] = `
<DocumentFragment>
  <div
    data-testid="Tooltip-mock"
  >
    <div
      data-testid="Tooltip-mock-content-container"
    >
      Test Vestibulum interdum risus et enim faucibus, sit amet molestie est accumsan.
    </div>
    <p>
      position: top
    </p>
    <span
      class="pf-c-truncate"
    >
      <span
        class="pf-c-truncate__start"
      >
        Vestibulum interdum risus et enim faucibus, sit amet molestie est accumsan.
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`renders start truncation with &lrm; at end 1`] = `
<DocumentFragment>
  <div
    data-testid="Tooltip-mock"
  >
    <div
      data-testid="Tooltip-mock-content-container"
    >
      Test Vestibulum interdum risus et enim faucibus, sit amet molestie est accumsan.
    </div>
    <p>
      position: top
    </p>
    <span
      class="pf-c-truncate"
    >
      <span
        class="pf-c-truncate__end"
      >
        Vestibulum interdum risus et enim faucibus, sit amet molestie est accumsan.‎
      </span>
    </span>
  </div>
</DocumentFragment>
`;
